# routers/commentsRouter_controllers_customercontroller.go
@@ -18,6 +18,15 @@ func init() {
 
     beego.GlobalControllerRouter["BookStore/controllers/customercontroller:CustomerController"] = append(beego.GlobalControllerRouter["BookStore/controllers/customercontroller:CustomerController"],
         beego.ControllerComments{
+            Method: "GetInfo",
+            Router: "/detail/:userId",
+            AllowHTTPMethods: []string{"get"},
+            MethodParams: param.Make(),
+            Filters: nil,
+            Params: nil})
+
+    beego.GlobalControllerRouter["BookStore/controllers/customercontroller:CustomerController"] = append(beego.GlobalControllerRouter["BookStore/controllers/customercontroller:CustomerController"],
+        beego.ControllerComments{
             Method: "LoginAdmin",
             Router: "/login",
             AllowHTTPMethods: []string{"post"},
