# swagger/swagger.yml
@@ -88,8 +88,8 @@ paths:
     get:
       tags:
       - account/customer
-      description: get roles
-      operationId: CustomerController.GetAdmins
+      description: GetCustomers
+      operationId: CustomerController.GetCustomers
       parameters:
       - in: header
         name: token
@@ -111,6 +111,28 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/responses.ResponseCommonArray'
+  /account/customer/detail/{userId}:
+    get:
+      tags:
+      - account/customer
+      description: GetCustomers
+      operationId: CustomerController.GetCustomers
+      parameters:
+      - in: header
+        name: token
+        description: token
+        required: true
+        type: string
+      - in: path
+        name: userId
+        description: userId
+        type: integer
+        format: int32
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/responses.ResponseCommonSingle'
   /account/customer/login:
     post:
       tags:
@@ -748,7 +770,7 @@ paths:
           schema:
             $ref: '#/definitions/responses.ResponseCommonArray'
   /common/administrative/districts/{cityId}:
-    post:
+    get:
       tags:
       - common
       description: Get District of city
@@ -765,7 +787,7 @@ paths:
           schema:
             $ref: '#/definitions/data.District'
   /common/administrative/wards/{districtId}:
-    post:
+    get:
       tags:
       - common
       description: GetWards of district
@@ -804,6 +826,34 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/responses.ResponseCommonSingle'
+  /orders/history:
+    get:
+      tags:
+      - orders
+      description: order history
+      operationId: OrderController.OrderHistory
+      parameters:
+      - in: header
+        name: token
+        description: token
+        schema:
+          $ref: '#/definitions/true'
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/responses.ResponseCommonArray'
+  /payments/:
+    get:
+      tags:
+      - payments
+      description: get Payment
+      operationId: PaymentController.GetPayment
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/responses.ResponseCommonArray'
   /publishers/with-book-count:
     get:
       tags:
@@ -815,11 +865,42 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/responses.ResponseCommonArray'
+  /vouchers/:
+    get:
+      tags:
+      - vouchers
+      description: GetVouchers
+      operationId: VoucherController.GetVouchers
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/responses.ResponseCommonArray'
+  /wsorders/:
+    get:
+      tags:
+      - wsorders
+      description: Get Websocket Orderbook
+      operationId: OrderbookWSController.Get Websocket Orderbook
+      parameters:
+      - in: body
+        name: params
+        description: description
+        required: true
+        schema:
+          $ref: '#/definitions/requestbody.WSBodyRequest'
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/responses.ResponseCommonArray'
+        "404":
+          description: nothing here
 definitions:
-  209.0xc00060ca50.false:
+  209.0xc00094de00.false:
     title: "false"
     type: object
-  483.0xc00060cb70.false:
+  483.0xc00094df20.false:
     title: "false"
     type: object
   data.District:
@@ -904,7 +985,7 @@ definitions:
           $ref: '#/definitions/requestbody.order'
       payment_method:
         type: integer
-        format: int64
+        format: int32
       receive_info:
         $ref: '#/definitions/requestbody.receiveInfo'
   requestbody.PermissionPutRequest:
@@ -948,6 +1029,14 @@ definitions:
       active:
         type: boolean
       name:
+        type: string
+  requestbody.WSBodyRequest:
+    title: WSBodyRequest
+    type: object
+    properties:
+      channel:
+        type: string
+      message:
         type: string
   requestbody.control:
     title: control
@@ -1023,7 +1112,7 @@ definitions:
     type: object
     properties:
       data:
-        $ref: '#/definitions/483.0xc00060cb70.false'
+        $ref: '#/definitions/483.0xc00094df20.false'
       error:
         $ref: '#/definitions/responses.Err'
       total_count:
@@ -1034,7 +1123,7 @@ definitions:
     type: object
     properties:
       data:
-        $ref: '#/definitions/209.0xc00060ca50.false'
+        $ref: '#/definitions/209.0xc00094de00.false'
       error:
         $ref: '#/definitions/responses.Err'
   "true":
